spectral.tex clean-up

--- a/common/spectral.tex
+++ b/common/spectral.tex
@@ -278,12 +278,7 @@ Let $\opA\in\clB{\spX}{\spY}$ be an operator.
 \begin{theorem}[\thmd{Spectral Theorem}]
 \footnote{
   \citerp{michel1993}{457},
-  \citerp{bollobas1999}{200}
-  }
-\label{thm:spectral_theorem}
-\index{spectral theorem}
-\index{theorems!spectral theorem}
-\footnote{
+  \citerp{bollobas1999}{200},
   \citer{hilbert1906r4},
   \citer{hilbert1912},
   \citer{vonNeumann1929},
@@ -293,8 +288,8 @@ Let $\opA\in\clB{\spX}{\spY}$ be an operator.
 Let $\opN\in\clFxy$ be an operator.
 \thmbox{\begin{array}{l}
   \left.\begin{array}{Fl}
-    (1). & \mcom{\opNa\opN=\opN\opNa}{$\opN$ is \hie{normal}}\\
-    (2). & \text{$\opN$ is \hie{compact}}
+    (A). & \mcom{\opNa\opN=\opN\opNa}{$\opN$ is \hie{normal}}\\
+    (B). & \text{$\opN$ is \hie{compact}}
   \end{array}\right\}
   \qquad\implies\qquad
   \left\{\begin{array}{F>{\ds}rc>{\ds}l}
@@ -416,19 +411,18 @@ Let $\opK$ be a \prop{Fredholm operator} with kernel $\kappa(t,s)$ and adjoint $
 \end{proof}
 
 %---------------------------------------
-\begin{theorem}
-\label{thm:intop_KKkk}
+\begin{corollary}
 \footnote{
   \citerp{michel1993}{430}
   }
 %---------------------------------------
 Let $\opK$ be an \prop{Fredholm operator} with kernel $\kappa(t,s)$ and adjoint $\opKa$.
-\thmbox{
+\corbox{
   \mcom{\opK=\opKa}{$\opK$ is self-adjoint}
   \qquad\iff\qquad
   \mcom{\kappa(t,s) = \kappa^\ast(s,t)}{kernel is \prop{conjugate symmetric}}
   }
-\end{theorem}
+\end{corollary}
 \begin{proof}
 \begin{align*}
   \opK = \opKa
@@ -437,8 +431,6 @@ Let $\opK$ be an \prop{Fredholm operator} with kernel $\kappa(t,s)$ and adjoint 
   \\&\iff \kappa(t,s) =  \kappa^\ast(s,t) 
 \end{align*}
 \end{proof}
-
-
 
 %---------------------------------------
 \begin{theorem}[Mercer's Theorem]
@@ -454,19 +446,15 @@ Let $\opK$ be an \prop{Fredholm operator} with kernel $\kappa(t,s)$ and adjoint 
 Let $\opK$ be an \prop{Fredholm operator} with kernel $\kappa(t,s)$ and
 eigensystem $\seq{(\lambda_n,\phi_n(t))}{n\in\Z}$.
 \thmbox{
-  \left.\begin{array}{ll}
-    1.& \mcom{\int_a^b \int_a^b \kappa(t,s) \ff(t) \ff^\ast(s) \ds\dt \ge 0}{positive} \quad \text{and }\\
-    2.& \kappa(t,s) \text{ is continuous on } [a,b]\times[a,b]
-  \end{array}\right\}
+  \brb{\begin{array}{F>{\ds}lD}
+    (A). & \mcom{\int_a^b \int_a^b \kappa(t,s) \ff(t) \ff^\ast(s) \ds\dt \ge 0}{positive} & and\\
+    (B). & \kappa(t,s) \text{ is continuous on } [a,b]\times[a,b]
+  \end{array}}
   \implies
-  \left\{\begin{array}{ll}
-    1.& \kappa(t,s) = \sum_n \lambda_n \fphi_n(t) \fphi_n^\ast(s) \quad\text{and}\\
-    2.& \kappa(t,s) \text{ converges absolutely and} \\
-      & \text{uniformly on $[a,b]\times[a,b]$}
-  \end{array}\right.
+  \brb{\begin{array}{F>{\ds}lD}
+    (1). & \kappa(t,s) = \sum_n \lambda_n \fphi_n(t) \fphi_n^\ast(s) & and\\
+    (2). & \kappa(t,s) \text{ converges absolutely and} \\
+      & \text{uniformly on $\intcc{a}{b}\times\intcc{a}{b}$}
+  \end{array}}
   }
 \end{theorem}
-\begin{proof}
-
-\end{proof}
-
