KL Expansion proof justification

--- a/common/randprocess.tex
+++ b/common/randprocess.tex
@@ -130,7 +130,7 @@ let $\Rxx(t,u)$ be the auto-correlation of $\fx(t)$.
 \thmbox{
 \begin{array}{rcll}
    \Rxx(t,u) &=& \Rxx^\ast(u,t) & \text{(\prope{conjugate symmetric})}\\
-   \Rxy(t,u) &=& \Ryx^\ast(u,t) & 
+   \Rxy(t,u) &=& \Ryx^\ast(u,t) &
 \end{array}
 }
 \end{theorem}
@@ -176,15 +176,15 @@ Let $\rvx(t)$ be a \fncte{random process} with \fncte{auto-correlation} $\Rxx(\t
 \end{definition}
 
 If a random process $\rvx(t)$ is \prope{white} \xref{def:white}
-and the set $\Psi=\setn{\psi_1(t),\psi_2(t),\ldots,\psi_N(t)\}}$ 
+and the set $\Psi=\setn{\fpsi_1(t),\fpsi_2(t),\ldots,\fpsi_N(t)\}}$
 is \textbf{any} set of orthonormal basis functions, then the innerproducts
-$\inprod{n(t)}{\psi_n(t)}$ and $\inprod{n(t)}{\psi_m(t)}$ are \prope{uncorrelated}
+$\inprod{n(t)}{\fpsi_n(t)}$ and $\inprod{n(t)}{\fpsi_m(t)}$ are \prope{uncorrelated}
 for $m\ne  n$.
 However, if $\rvx(t)$ is \propb{colored} (not white), then the innerproducts are not
 in general uncorrelated.
 But if the elements of $\Psi$ are chosen to be the eigenfunctions of $\opR$ such
-that $\ds\opR \psi_n = \lambda_n \psi_n$,
-then by \prefpp{thm:Rxx_prop}, the set $\setn{\psi_n(t)}$ are \prope{orthogonal} and
+that $\ds\opR \fpsi_n = \lambda_n \fpsi_n$,
+then by \prefpp{thm:Rxx_prop}, the set $\setn{\fpsi_n(t)}$ are \prope{orthogonal} and
 the innerproducts \textbf{are} \prope{uncorrelated} even though $\rvx(t)$ is
 not white.
 This criterion is called the  Karhunen-Lo\`{e}ve criterion for $\rvx(t)$.
@@ -225,7 +225,7 @@ Let $\opR$ be an \ope{auto-correlation} operator.
      && \text{by \prope{conjugate symmetry} prop.}
      && \text{\ifsxref{vsinprod}{def:inprod}}
    \\&= \pE{\abs{\inprod{\fx(t) }{\fy(t)}}^2}
-     && \text{by definition of $\absn$} 
+     && \text{by definition of $\absn$}
      && \text{\xref{def:abs}}
    \\&\ge 0
 \intertext{2. Proof that $\opR$ is self-adjoint:}
@@ -260,22 +260,23 @@ Let $\opR$ be an \ope{auto-correlation} operator.
 \footnote{
   \citerpp{keener}{114}{119}
   }
+\label{thm:opR_eigen}
 %---------------------------------------
 Let $\seq{\lambda_n}{n\in\Z}$ be the eigenvalues and
     $\seq{\fpsi_n}{n\in\Z}$ be the eigenfunctions of
     operator $\opR$ such that
-    $\opR \psi_n = \lambda_n \psi_n$.
+    $\opR \fpsi_n = \lambda_n \fpsi_n$.
 \thmbox{\begin{array}{rlp{7cm}}
   1. & \lambda_n \in \R
      & (eigenvalues of $\opR$ are \prope{real})
      \\
-  2. & \lambda_n\ne \lambda_m \implies \inprod{\psi_n}{\psi_m}=0
+  2. & \lambda_n\ne \lambda_m \implies \inprod{\fpsi_n}{\fpsi_m}=0
      & (eigenfunctions associated with distinct eigenvalues are \prope{orthogonal})
      \\
-  3. & \norm{\psi_n(t)}^2>0 \implies \lambda_n\ge0
+  3. & \norm{\fpsi_n(t)}^2>0 \implies \lambda_n\ge0
      & (eigenvalues are \prope{non-negative})
      \\
-  4. & \norm{\psi_n(t)}^2>0, \inprod{\opR f}{f} > 0 \implies \lambda_n>0
+  4. & \norm{\fpsi_n(t)}^2>0, \inprod{\opR f}{f} > 0 \implies \lambda_n>0
      & (if $\opR$ is \prope{positive definite}, then eigenvalues are \prope{positive})
 \end{array}}
 \end{theorem}
@@ -289,25 +290,25 @@ Because $\opR$ is self-adjoint, this property follows\ifsxref{operator}{thm:self
 
 \item Proof that eigenvalues are \prope{non-negative}:
 \begin{align*}
-   0 &\ge \inprod{\opR \psi_n}{\psi_n}
+   0 &\ge \inprod{\opR \fpsi_n}{\fpsi_n}
      &&   \text{by definition of non-negative definite}
-   \\&=   \inprod{\lambda_n \psi_n}{\psi_n}
+   \\&=   \inprod{\lambda_n \fpsi_n}{\fpsi_n}
      &&   \text{by hypothesis}
-   \\&=   \lambda_n \inprod{\psi_n}{\psi_n}
+   \\&=   \lambda_n \inprod{\fpsi_n}{\fpsi_n}
      &&   \text{by definition of inner-products}
-   \\&=   \lambda_n \norm{\psi_n}^2
+   \\&=   \lambda_n \norm{\fpsi_n}^2
      &&   \text{by definition of norm induced by inner-product}
 \end{align*}
 
 \item Eigenvalues are \prope{positive} if $\opR$ is \prope{positive definite}:
 \begin{align*}
-   0 &> \inprod{\opR \psi_n}{\psi_n}
+   0 &> \inprod{\opR \fpsi_n}{\fpsi_n}
      && \text{by definition of \prope{positive definite}}
-   \\&= \inprod{\lambda_n \psi_n}{\psi_n}
+   \\&= \inprod{\lambda_n \fpsi_n}{\fpsi_n}
      && \text{by hypothesis}
-   \\&= \lambda_n \inprod{\psi_n}{\psi_n}
+   \\&= \lambda_n \inprod{\fpsi_n}{\fpsi_n}
      && \text{by definition of inner-products}
-   \\&= \lambda_n \norm{\psi_n}^2
+   \\&= \lambda_n \norm{\fpsi_n}^2
      && \text{by definition of norm induced by inner-product}
 \end{align*}
 
@@ -319,55 +320,99 @@ Because $\opR$ is self-adjoint, this property follows\ifsxref{operator}{thm:self
 \footnote{
   \citerpp{keener}{114}{119}
   }
+\label{thm:kle}
 %---------------------------------------
-Let $\opR$ be the \ope{auto-correlation operator} \xref{def:opR} 
+Let $\opR$ be the \ope{auto-correlation operator} \xref{def:opR}
 of a \fncte{random process} $\rvx(t)$.
 Let $\seq{\lambda_n}{n\in\Z}$ be the eigenvalues of $\opR$
 and $\seq{\fpsi_n}{n\in\Z}$ are the eigenfunctions of $\opR$ such that
-    $\opR \psi_n = \lambda_n \psi_n$.
+    $\opR \fpsi_n = \lambda_n \fpsi_n$.
 \thmbox{
-  \mcom{\pE\brp{\abs{ x(t)-\sum_{n\in\Z}\inprod{x(t)}{\psi_n(t)} \psi_n(t) }^2} = 0}
+  \mcom{\pE\brp{\abs{ x(t)-\sum_{n\in\Z}\inprod{\fx(t)}{\fpsi_n(t)} \fpsi_n(t) }^2} = 0}
        {\prope{convergence in probability}}
-    \qquad($\setn{\psi_n(t)}$ is a \structe{basis} for $\rvx(t)$)
+    \qquad($\setn{\fpsi_n(t)}$ is a \structe{basis} for $\rvx(t)$)
   }
 \end{theorem}
 \begin{proof}
 \begin{enumerate}
-\item Proof that $\setn{\psi_n(t)}$ is a \structe{basis} for $\rvx(t)$ such that
-      \\$\ds\pE\brb{\left| x(t)-\sum_{n\in\Z}\dot{x}_n \psi_n(t) \right|^2} = 0$
-        \qquad where \quad$\dot{x}_n\eqd \inprod{x(t)}{\psi_n(t)}$
+  \item Define $\ds\dotx_n\eqd \inprod{\fx(t)}{\fpsi_n(t)}$ \label{idef:kle_xdot}
+  \item Define $\ds\opR\fx(t) \eqd \int_{u\in\R} \Rxx(t,u)\fx(u)\du$ \label{idef:kle_R}
+
+  \item lemma: \label{ilem:kle_1}
     \begin{align*}
-       \pE\brs{x(t) \brp{\sum_{n\in\Z}\dot{x}_n \psi_n(t)}^\ast}
-         &= \pE\brs{x(t) \brp{\sum_{n\in\Z}\int_{u\in\R}x(u)\psi_n^\ast(u)\du \psi_n(t)}^\ast}
-       \\&= \sum_{n\in\Z}\brp{\int_{u\in\R}\pE\brs{x(t)x^\ast(u)}\psi_n(u)\du} \psi_n^\ast(t)
-       \\&= \sum_{n\in\Z}\brp{\int_{u\in\R}\Rxx(t,u)\psi_n(u)\du} \psi_n^\ast(t)
-       \\&= \sum_{n\in\Z}\lambda_n\psi_n(t) \psi_n^\ast(t)
-       \\&= \sum_{n\in\Z}\lambda_n \left|\psi_n(t) \right|^2
-    \\ \\
-       \pE\brs{\sum_{n\in\Z}\dot{x}_n \psi_n(t)\brp{\sum_{m\in\Z}\dot{x}_m \psi_m(t)}^\ast}
-         &= \pE\brs{\sum_{n\in\Z}\int_{u\in\R}x(u)\psi_n^\ast(u)\du   \psi_n(t)\brp{\sum_{m\in\Z}\int_v x(v)\psi_m^\ast(v)\dv \psi_m(t)}^\ast}
-       \\&= \sum_{n\in\Z}\sum_{m\in\Z}\int_u\brp{\int_v \pE\brs{x(u)x^\ast(v)}\psi_m(v)\dv} \psi_n^\ast(u)\du   \psi_n(t)   \psi_m^\ast(t)
-       \\&= \sum_{n\in\Z}\sum_{m\in\Z}\int_u\brp{\int_v \Rxx(u,v)\psi_m(v)\dv} \psi_n^\ast(u)\du   \psi_n(t)   \psi_m^\ast(t)
-       \\&= \sum_{n\in\Z}\sum_{m\in\Z}\int_u\brp{\lambda_m\psi_m(u)} \psi_n^\ast(u)\du   \psi_n(t)   \psi_m^\ast(t)
-       \\&= \sum_{n\in\Z}\sum_{m\in\Z}\lambda_m \brp{\int_{u\in\R}\psi_m(u) \psi_n^\ast(u)\du }   \psi_n(t)   \psi_m^\ast(t)
-       \\&= \sum_{n\in\Z}\sum_{m\in\Z}\lambda_m \kdelta_{mn}   \psi_n(t)   \psi_m^\ast(t)
-       \\&= \sum_{n\in\Z}\lambda_n   \psi_n(t)   \psi_n^\ast(t)
-       \\&= \sum_{n\in\Z}\lambda_n  \left| \psi_n(t) \right|^2
+       \pE\brs{\fx(t) \brp{\sum_{n\in\Z}\dotx_n \fpsi_n(t)}^\ast}
+         &\eqd \pE\brs{\fx(t) \brp{\sum_{n\in\Z}\int_{u\in\R}x(u)\fpsi_n^\ast(u)\du \fpsi_n(t)}^\ast}
+         && \text{by definition of $\dotx$}
+         && \text{\xref{idef:kle_xdot}}
+       \\&= \sum_{n\in\Z}\brp{\int_{u\in\R}\pE\brs{\fx(t)x^\ast(u)}\fpsi_n(u)\du} \fpsi_n^\ast(t)
+         && \text{by \prope{linearity}}
+         && \text{\xref{thm:pE_linop}}
+       \\&\eqd \sum_{n\in\Z}\brp{\int_{u\in\R}\Rxx(t,u)\fpsi_n(u)\du} \fpsi_n^\ast(t)
+         && \text{by definition of $\Rxx(t,u)$}
+         && \text{\xref{def:Rxx}}
+       \\&\eqd \sum_{n\in\Z}\brp{\opR\fpsi_n(t) \fpsi_n^\ast(t)
+         && \text{by definition of $\opR$}
+         && \text{\xref{idef:kle_R}}
+       \\&= \sum_{n\in\Z}\lambda_n\fpsi_n(t) \fpsi_n^\ast(t)
+         && \text{by property of \structe{eigen-system}}
+       \\&= \sum_{n\in\Z}\lambda_n \abs{\fpsi_n(t)}^2
     \end{align*}
 
+  \item lemma: \label{ilem:kle_2}
+    \begin{align*}
+       \pE\brs{\sum_{n\in\Z}\dotx_n \fpsi_n(t)\brp{\sum_{m\in\Z}\dotx_m \fpsi_m(t)}^\ast}
+         &\eqd \pE\brs{\sum_{n\in\Z}\int_{u\in\R}x(u)\fpsi_n^\ast(u)\du   \fpsi_n(t)\brp{\sum_{m\in\Z}\int_v x(v)\fpsi_m^\ast(v)\dv \fpsi_m(t)}^\ast}
+         && \text{by definition of $\dotx$}
+         && \text{\xref{idef:kle_xdot}}
+       \\&= \sum_{n\in\Z}\sum_{m\in\Z}\int_u\brp{\int_v \pE\brs{\fx(u)x^\ast(v)}\fpsi_m(v)\dv} \fpsi_n^\ast(u)\du   \fpsi_n(t)   \fpsi_m^\ast(t)
+         && \text{by \prope{linearity}}
+         && \text{\xref{thm:pE_linop}}
+       \\&= \sum_{n\in\Z}\sum_{m\in\Z}\int_u\brp{\int_v \Rxx(u,v)\fpsi_m(v)\dv} \fpsi_n^\ast(u)\du   \fpsi_n(t)   \fpsi_m^\ast(t)
+         && \text{by definition of $\Rxx(t,u)$}
+         && \text{\xref{def:Rxx}}
+       \\&= \sum_{n\in\Z}\sum_{m\in\Z}\int_u\brp{\opR\fpsi_m(u)} \fpsi_n^\ast(u)\du   \fpsi_n(t)   \fpsi_m^\ast(t)
+         && \text{by definition of $\opR$}
+         && \text{\xref{idef:kle_R}}
+       \\&= \sum_{n\in\Z}\sum_{m\in\Z}\int_u\brp{\lambda_m\fpsi_m(u)} \fpsi_n^\ast(u)\du   \fpsi_n(t)   \fpsi_m^\ast(t)
+         && \text{by property of \structe{eigen-system}}
+       \\&= \sum_{n\in\Z}\sum_{m\in\Z}\lambda_m \brp{\int_{u\in\R}\fpsi_m(u) \fpsi_n^\ast(u)\du }   \fpsi_n(t)   \fpsi_m^\ast(t)
+         && \text{by \prope{linearity}}
+       \\&\eqq \sum_{n\in\Z}\sum_{m\in\Z}\lambda_m \kdelta_{mn}   \fpsi_n(t)   \fpsi_m^\ast(t)
+         && \text{by \prope{orthogonal} property}
+         && \text{\xref{thm:opR_eigen}}
+       \\&= \sum_{n\in\Z}\lambda_n   \fpsi_n(t)   \fpsi_n^\ast(t)
+         && \text{by definition of \fncte{Kronecker delta} $\kdelta$}
+         && \text{\xref{def:kdelta}}
+       \\&= \sum_{n\in\Z}\lambda_n \abs{\fpsi_n(t)}^2
+    \end{align*}
 
-\item Using the previous two results, we can prove the following:
-
-\begin{align*}
-  &\pE\brb{\left| x(t)-\sum_{n\in\Z}\dot{x}_n \psi_n(t) \right|^2}
-  \\&= \pE\brs{\brs{ x(t)-\sum_{n\in\Z}\dot{x}_n \psi_n(t) }\brs{ x(t)-\sum_{m\in\Z}\dot{x}_m \psi_m(t) }^\ast}
-  \\&= \pE\brs{x(t)x^\ast(t) -x(t)\brp{\sum_{n\in\Z}\dot{x}_n \psi_n(t)}^\ast -x^\ast(t)\sum_{n\in\Z}\dot{x}_n \psi_n(t) + \sum_{n\in\Z}\dot{x}_n \psi_n(t) \brp{\sum_{m\in\Z}\dot{x}_m \psi_m(t) }^\ast }
-  \\&= \pE\brs{x(t)x^\ast(t)} -\pE\brs{x(t)\brp{\sum_{n\in\Z}\dot{x}_n \psi_n(t)}^\ast} -\pE\brs{x^\ast(t)\sum_{n\in\Z}\dot{x}_n \psi_n(t)} + \pE\brs{\sum_{n\in\Z}\dot{x}_n \psi_n(t) \brp{\sum_{m\in\Z}\dot{x}_m \psi_m(t) }^\ast }
-  \\&\text{by \thme{Mercer's Theorem}\xref{thm:mercer}}
-  \\&= \sum_{n\in\Z}\lambda_n |\psi_n(t)|^2 -\sum_{n\in\Z}\lambda_n \left|\psi_n(t) \right|^2  -\brp{\sum_{n\in\Z}\lambda_n \left|\psi_n(t) \right|^2}^\ast + \sum_{n\in\Z}\lambda_n \left|\psi_n(t) \right|^2
-  \\&= \sum_{n\in\Z}\lambda_n |\psi_n(t)|^2 -\sum_{n\in\Z}\lambda_n \left|\psi_n(t) \right|^2  -\sum_{n\in\Z}\lambda_n \left|\psi_n(t) \right|^2 + \sum_{n\in\Z}\lambda_n \left|\psi_n(t) \right|^2
-  \\&= 0
-\end{align*}
+\item Proof that $\setn{\fpsi_n(t)}$ is a \structe{basis} for $\rvx(t)$:
+  \begin{align*}
+    &\pE\brp{\abs{ x(t)-\sum_{n\in\Z}\dotx_n \fpsi_n(t) }^2}
+    \\&= \pE\brp{\brs{ x(t)-\sum_{n\in\Z}\dotx_n \fpsi_n(t) }\brs{ x(t)-\sum_{m\in\Z}\dotx_m \fpsi_m(t) }^\ast}
+    \\&= \pE\brp{
+         \fx(t)x^\ast(t)
+       - \fx(t)\brs{\sum_{n\in\Z}\dotx_n \fpsi_n(t)}^\ast
+       - \fx^\ast(t)\sum_{n\in\Z}\dotx_n \fpsi_n(t)
+       + \brs{\sum_{n\in\Z}\dotx_n \fpsi_n(t)} \brs{\sum_{m\in\Z}\dotx_m \fpsi_m(t) }^\ast
+       }
+    \\&= \pE\brp{\fx(t)x^\ast(t)}
+       - \pE\brs{\fx(t)\brs{\sum_{n\in\Z}\dotx_n \fpsi_n(t)}^\ast}
+       - \pE\brs{x^\ast(t)\sum_{n\in\Z}\dotx_n \fpsi_n(t)}
+       + \pE\brs{\sum_{n\in\Z}\dotx_n \fpsi_n(t) \brs{\sum_{m\in\Z}\dotx_m \fpsi_m(t) }^\ast }
+      && \text{by \prope{linearity}}
+      && \text{\xref{thm:pE_linop}}
+    \\&\text{by \thme{Mercer's Theorem}\xref{thm:mercer}?}
+    \\&= \sum_{n\in\Z}\lambda_n \abs{\fpsi_n(t)}^2
+       - \sum_{n\in\Z}\lambda_n \abs{\fpsi_n(t)}^2
+       - \brs{\sum_{n\in\Z}\lambda_n \abs{\fpsi_n(t)}^2}^\ast
+       + \sum_{n\in\Z}\lambda_n \abs{\fpsi_n(t)}^2
+    \\&= \sum_{n\in\Z}\lambda_n \abs{\fpsi_n(t)}^2
+       - \sum_{n\in\Z}\lambda_n \abs{\fpsi_n(t)}^2
+       - \sum_{n\in\Z}\lambda_n \abs{\fpsi_n(t)}^2
+       + \sum_{n\in\Z}\lambda_n \abs{\fpsi_n(t)}^2
+    \\&= 0
+  \end{align*}
 \end{enumerate}
 \end{proof}
 
