--- a/common/randprocess.tex
+++ b/common/randprocess.tex
@@ -124,9 +124,9 @@ The equation $\int_{u\in\R}\Rxx(t,u)\ff(u) \du$ is a
 \index{symmetric!conjugate}
 \index{conjuage symmetric}
 %---------------------------------------
-Let $\fx(t)$ and $\fy(t)$ be random processes with
+Let $\rvx(t)$ and $\fy(t)$ be random processes with
 cross-correlation $\Rxy(t,u)$ and
-let $\Rxx(t,u)$ be the auto-correlation of $\fx(t)$.
+let $\Rxx(t,u)$ be the auto-correlation of $\rvx(t)$.
 \thmbox{
 \begin{array}{rcll}
    \Rxx(t,u) &=& \Rxx^\ast(u,t) & \text{(\prope{conjugate symmetric})}\\
@@ -194,11 +194,11 @@ This criterion is called the  Karhunen-Lo\`{e}ve criterion for $\rvx(t)$.
 %---------------------------------------
 Let $\opR$ be an \ope{auto-correlation} operator.
 \thmbox{\begin{array}{lll}
-  \inprod{\opR \fx}{\fx} \ge 0
-    & \forall \fx\in\spX
+  \inprod{\opR \rvx}{\rvx} \ge 0
+    & \forall \rvx\in\spX
     & \text{(\prope{non-negative})}  \\
-  \inprod{\opR \fx}{\fy} = \inprod{\fx}{\opR \fy}
-    & \forall \fx,\fy\in\spX
+  \inprod{\opR \rvx}{\fy} = \inprod{\rvx}{\opR \fy}
+    & \forall \rvx,\fy\in\spX
     & \text{(\prope{self-adjoint})}
 \end{array}}
 \end{theorem}
@@ -209,46 +209,46 @@ Let $\opR$ be an \ope{auto-correlation} operator.
      &= \inprod{\int_{u\in\R}\Rxx(t,u) \fy(u) \du}{\fy(t)}
      && \text{by definition of $\opR$}
      && \text{\xref{def:opR}}
-   \\&= \inprod{\int_{u\in\R}\pE\brs{\fx(t)\fx^\ast(u)} \fy(u) \du}{\fy(t)}
+   \\&= \inprod{\int_{u\in\R}\pE\brs{\rvx(t)\rvx^\ast(u)} \fy(u) \du}{\fy(t)}
      && \text{by definition of $\Rxx(t,u)$}
      && \text{\xref{def:Rxx}}
-   \\&= \pE\brs{\inprod{\int_{u\in\R}\fx(t)\fx^\ast(u) \fy(u) \du}{\fy(t)}}
+   \\&= \pE\brs{\inprod{\int_{u\in\R}\rvx(t)\rvx^\ast(u) \fy(u) \du}{\fy(t)}}
      && \text{by \prope{linearity} of $\inprodn$ and $\int$}
      && \text{\ifsxref{vsinprod}{def:inprod}}
-   \\&= \pE\brs{\int_{u\in\R}\fx^\ast(u) \fy(u) \du \inprod{\fx(t)}{\fy(t)}}
+   \\&= \pE\brs{\int_{u\in\R}\rvx^\ast(u) \fy(u) \du \inprod{\rvx(t)}{\fy(t)}}
      && \text{by \prope{additivity} property of $\inprodn$}
      && \text{\ifsxref{vsinprod}{def:inprod}}
-   \\&= \pE\brs{\inprod{\fy(u)}{\fx(u)} \inprod{\fx(t) }{\fy(t)}}
+   \\&= \pE\brs{\inprod{\fy(u)}{\rvx(u)} \inprod{\rvx(t) }{\fy(t)}}
      && \text{by local definition of $\inprodn$}
      && \text{\ifsxref{vsinprod}{def:inprod}}
-   \\&= \pE\brs{\inprod{\fx(u)}{\fy(u)}^\ast \inprod{\fx(t) }{\fy(t)}}
+   \\&= \pE\brs{\inprod{\rvx(u)}{\fy(u)}^\ast \inprod{\rvx(t) }{\fy(t)}}
      && \text{by \prope{conjugate symmetry} prop.}
      && \text{\ifsxref{vsinprod}{def:inprod}}
-   \\&= \pE{\abs{\inprod{\fx(t) }{\fy(t)}}^2}
+   \\&= \pE{\abs{\inprod{\rvx(t) }{\fy(t)}}^2}
      && \text{by definition of $\absn$}
      && \text{\xref{def:abs}}
    \\&\ge 0
 \intertext{2. Proof that $\opR$ is self-adjoint:}
-   \inprod{\brs{\opR \fx}(t)}{\fy}
-     &= \inprod{\int_{u\in\R}\Rxx(t,u) \fx(u) \du}{\fy(t)}
+   \inprod{\brs{\opR \rvx}(t)}{\fy}
+     &= \inprod{\int_{u\in\R}\Rxx(t,u) \rvx(u) \du}{\fy(t)}
      && \text{by definition of $\opR$}
      && \text{\xref{def:opR}}
-   \\&= \int_{u\in\R}\fx(u) \inprod{\Rxx(t,u)  }{\fy(t)} \du
+   \\&= \int_{u\in\R}\rvx(u) \inprod{\Rxx(t,u)  }{\fy(t)} \du
      && \text{by \prope{additive} property of $\inprodn$}
      && \text{\ifsxref{vsinprod}{def:inprod}}
-   \\&= \int_{u\in\R}\fx(u) \inprod{\fy(t)}{\Rxx(t,u)}^\ast \du
+   \\&= \int_{u\in\R}\rvx(u) \inprod{\fy(t)}{\Rxx(t,u)}^\ast \du
      && \text{by \prope{conjugate symmetry} prop.}
      && \text{\ifsxref{vsinprod}{def:inprod}}
-   \\&= \inprod{ \fx(u) }{\inprod{\fy(t)}{\Rxx(t,u)} }
+   \\&= \inprod{ \rvx(u) }{\inprod{\fy(t)}{\Rxx(t,u)} }
      && \text{by local definition of $\inprodn$}
      && \text{\ifsxref{vsinprod}{def:inprod}}
-   \\&= \inprod{ \fx(u) }{\int_{t\in\R}\fy(t) \Rxx^\ast(t,u)\dt }
+   \\&= \inprod{ \rvx(u) }{\int_{t\in\R}\fy(t) \Rxx^\ast(t,u)\dt }
      && \text{by local definition of $\inprodn$}
      && \text{\ifsxref{vsinprod}{def:inprod}}
-   \\&= \inprod{ \fx(u) }{\int_{t\in\R}\fy(t) \Rxx(u,t)\dt }
+   \\&= \inprod{ \rvx(u) }{\int_{t\in\R}\fy(t) \Rxx(u,t)\dt }
      && \text{by property of $\Rxx$}
      && \text{\xref{thm:Rxx_prop}}
-   \\&= \inprod{ \fx(u) }{\mcom{\opR}{$\opRa$} \fy }
+   \\&= \inprod{ \rvx(u) }{\mcom{\opR}{$\opRa$} \fy }
      && \text{by definition of $\opR$}
      && \text{\xref{def:opR}}
    \\\implies&\qquad \opR=\opRa \qquad\implies \text{$\opR$ is \prope{self adjoint}}
@@ -276,7 +276,7 @@ Let $\seq{\lambda_n}{n\in\Z}$ be the eigenvalues and
   3. & \norm{\fpsi_n(t)}^2>0 \implies \lambda_n\ge0
      & (eigenvalues are \prope{non-negative})
      \\
-  4. & \norm{\fpsi_n(t)}^2>0, \inprod{\opR f}{f} > 0 \implies \lambda_n>0
+  4. & \norm{\fpsi_n(t)}^2>0, \inprod{\opR\ff}{\ff} > 0 \implies \lambda_n>0
      & (if $\opR$ is \prope{positive definite}, then eigenvalues are \prope{positive})
 \end{array}}
 \end{theorem}
@@ -328,23 +328,23 @@ Let $\seq{\lambda_n}{n\in\Z}$ be the eigenvalues of $\opR$
 and $\seq{\fpsi_n}{n\in\Z}$ are the eigenfunctions of $\opR$ such that
     $\opR \fpsi_n = \lambda_n \fpsi_n$.
 \thmbox{
-  \mcom{\pE\brp{\abs{ x(t)-\sum_{n\in\Z}\inprod{\fx(t)}{\fpsi_n(t)} \fpsi_n(t) }^2} = 0}
+  \mcom{\pE\brp{\abs{\rvx(t)-\sum_{n\in\Z}\inprod{\rvx(t)}{\fpsi_n(t)} \fpsi_n(t) }^2} = 0}
        {\prope{convergence in probability}}
     \qquad($\setn{\fpsi_n(t)}$ is a \structe{basis} for $\rvx(t)$)
   }
 \end{theorem}
 \begin{proof}
 \begin{enumerate}
-  \item Define $\ds\dotx_n\eqd \inprod{\fx(t)}{\fpsi_n(t)}$ \label{idef:kle_xdot}
-  \item Define $\ds\opR\fx(t) \eqd \int_{u\in\R} \Rxx(t,u)\fx(u)\du$ \label{idef:kle_R}
+  \item Define $\ds\dotx_n\eqd \inprod{\rvx(t)}{\fpsi_n(t)}$ \label{idef:kle_xdot}
+  \item Define $\ds\opR\rvx(t) \eqd \int_{u\in\R} \Rxx(t,u)\rvx(u)\du$ \label{idef:kle_R}
 
   \item lemma: \label{ilem:kle_1}
     \begin{align*}
-       \pE\brs{\fx(t) \brp{\sum_{n\in\Z}\dotx_n \fpsi_n(t)}^\ast}
-         &\eqd \pE\brs{\fx(t) \brp{\sum_{n\in\Z}\int_{u\in\R}x(u)\fpsi_n^\ast(u)\du \fpsi_n(t)}^\ast}
+       \pE\brs{\rvx(t) \brp{\sum_{n\in\Z}\dotx_n \fpsi_n(t)}^\ast}
+         &\eqd \pE\brs{\rvx(t) \brp{\sum_{n\in\Z}\int_{u\in\R}\rvx(u)\fpsi_n^\ast(u)\du \fpsi_n(t)}^\ast}
          && \text{by definition of $\dotx$}
          && \text{\xref{idef:kle_xdot}}
-       \\&= \sum_{n\in\Z}\brp{\int_{u\in\R}\pE\brs{\fx(t)x^\ast(u)}\fpsi_n(u)\du} \fpsi_n^\ast(t)
+       \\&= \sum_{n\in\Z}\brp{\int_{u\in\R}\pE\brs{\rvx(t)\rvx^\ast(u)}\fpsi_n(u)\du} \fpsi_n^\ast(t)
          && \text{by \prope{linearity}}
          && \text{\xref{thm:pE_linop}}
        \\&\eqd \sum_{n\in\Z}\brp{\int_{u\in\R}\Rxx(t,u)\fpsi_n(u)\du} \fpsi_n^\ast(t)
@@ -361,10 +361,10 @@ and $\seq{\fpsi_n}{n\in\Z}$ are the eigenfunctions of $\opR$ such that
   \item lemma: \label{ilem:kle_2}
     \begin{align*}
        \pE\brs{\sum_{n\in\Z}\dotx_n \fpsi_n(t)\brp{\sum_{m\in\Z}\dotx_m \fpsi_m(t)}^\ast}
-         &\eqd \pE\brs{\sum_{n\in\Z}\int_{u\in\R}x(u)\fpsi_n^\ast(u)\du   \fpsi_n(t)\brp{\sum_{m\in\Z}\int_v x(v)\fpsi_m^\ast(v)\dv \fpsi_m(t)}^\ast}
+         &\eqd \pE\brs{\sum_{n\in\Z}\int_{u\in\R}\rvx(u)\fpsi_n^\ast(u)\du   \fpsi_n(t)\brp{\sum_{m\in\Z}\int_v \rvx(v)\fpsi_m^\ast(v)\dv \fpsi_m(t)}^\ast}
          && \text{by definition of $\dotx$}
          && \text{\xref{idef:kle_xdot}}
-       \\&= \sum_{n\in\Z}\sum_{m\in\Z}\int_u\brp{\int_v \pE\brs{\fx(u)x^\ast(v)}\fpsi_m(v)\dv} \fpsi_n^\ast(u)\du   \fpsi_n(t)   \fpsi_m^\ast(t)
+       \\&= \sum_{n\in\Z}\sum_{m\in\Z}\int_u\brp{\int_v \pE\brs{\rvx(u)\rvx^\ast(v)}\fpsi_m(v)\dv} \fpsi_n^\ast(u)\du   \fpsi_n(t)   \fpsi_m^\ast(t)
          && \text{by \prope{linearity}}
          && \text{\xref{thm:pE_linop}}
        \\&= \sum_{n\in\Z}\sum_{m\in\Z}\int_u\brp{\int_v \Rxx(u,v)\fpsi_m(v)\dv} \fpsi_n^\ast(u)\du   \fpsi_n(t)   \fpsi_m^\ast(t)
@@ -388,27 +388,26 @@ and $\seq{\fpsi_n}{n\in\Z}$ are the eigenfunctions of $\opR$ such that
 
 \item Proof that $\setn{\fpsi_n(t)}$ is a \structe{basis} for $\rvx(t)$:
   \begin{align*}
-    &\pE\brp{\abs{ x(t)-\sum_{n\in\Z}\dotx_n \fpsi_n(t) }^2}
-    \\&= \pE\brp{\brs{ x(t)-\sum_{n\in\Z}\dotx_n \fpsi_n(t) }\brs{ x(t)-\sum_{m\in\Z}\dotx_m \fpsi_m(t) }^\ast}
+    &\pE\brp{\abs{\rvx(t)-\sum_{n\in\Z}\dotx_n \fpsi_n(t) }^2}
+    \\&= \pE\brp{\brs{\rvx(t)-\sum_{n\in\Z}\dotx_n \fpsi_n(t) }\brs{\rvx(t)-\sum_{m\in\Z}\dotx_m \fpsi_m(t) }^\ast}
     \\&= \pE\brp{
-         \fx(t)x^\ast(t)
-       - \fx(t)\brs{\sum_{n\in\Z}\dotx_n \fpsi_n(t)}^\ast
-       - \fx^\ast(t)\sum_{n\in\Z}\dotx_n \fpsi_n(t)
+         \rvx(t)\rvx^\ast(t)
+       - \rvx(t)\brs{\sum_{n\in\Z}\dotx_n \fpsi_n(t)}^\ast
+       - \rvx^\ast(t)\sum_{n\in\Z}\dotx_n \fpsi_n(t)
        + \brs{\sum_{n\in\Z}\dotx_n \fpsi_n(t)} \brs{\sum_{m\in\Z}\dotx_m \fpsi_m(t) }^\ast
        }
-    \\&= \pE\brp{\fx(t)x^\ast(t)}
-       - \pE\brs{\fx(t)\brs{\sum_{n\in\Z}\dotx_n \fpsi_n(t)}^\ast}
-       - \pE\brs{x^\ast(t)\sum_{n\in\Z}\dotx_n \fpsi_n(t)}
+    \\&= \pE\brp{\rvx(t)\rvx^\ast(t)}
+       - \pE\brs{\rvx(t)\brs{\sum_{n\in\Z}\dotx_n \fpsi_n(t)}^\ast}
+       - \pE\brs{\rvx^\ast(t)\sum_{n\in\Z}\dotx_n \fpsi_n(t)}
        + \pE\brs{\sum_{n\in\Z}\dotx_n \fpsi_n(t) \brs{\sum_{m\in\Z}\dotx_m \fpsi_m(t) }^\ast }
-      && \text{by \prope{linearity}}
-      && \text{\xref{thm:pE_linop}}
-    \\&\text{by \thme{Mercer's Theorem}\xref{thm:mercer}?}
-    \\&= \sum_{n\in\Z}\lambda_n \abs{\fpsi_n(t)}^2
-       - \sum_{n\in\Z}\lambda_n \abs{\fpsi_n(t)}^2
+      %&& \text{by \prope{linearity}}
+      %&& \text{\xref{thm:pE_linop}}
+   %\\&\text{by \thme{Mercer's Theorem}\xref{thm:mercer}?}
+    \\&= \mcom{\sum_{n\in\Z}\lambda_n \abs{\fpsi_n(t)}^2
+       - \sum_{n\in\Z}\lambda_n \abs{\fpsi_n(t)}^2}{$0$}
        - \brs{\sum_{n\in\Z}\lambda_n \abs{\fpsi_n(t)}^2}^\ast
        + \sum_{n\in\Z}\lambda_n \abs{\fpsi_n(t)}^2
-    \\&= \sum_{n\in\Z}\lambda_n \abs{\fpsi_n(t)}^2
-       - \sum_{n\in\Z}\lambda_n \abs{\fpsi_n(t)}^2
+    \\&= 0
        - \sum_{n\in\Z}\lambda_n \abs{\fpsi_n(t)}^2
        + \sum_{n\in\Z}\lambda_n \abs{\fpsi_n(t)}^2
     \\&= 0
