spectral theory references

--- a/common/operator.tex
+++ b/common/operator.tex
@@ -1889,7 +1889,10 @@ Let $\fx(t)$ be a random process with autocorrelation
 \index{operator!self-adjoint}
 \footnote{
   \citerpp{lax}{315}{316},
-  \citerpp{keener}{114}{119}
+  \citerpp{keener}{114}{119},
+  \citerpgc{bachman1966}{24}{9780486402512}{Theorem 2.1},
+  
+  \citerpgc{bertero1998}{225}{9781439822067}{\textsection ``9.2 SVD of a matrix \ldots If all eigenvectors are normalized\ldots"}
   }
 %---------------------------------------
 Let $\opS:\spH\to\spH$ be an operator over a \structe{Hilbert space} $\spH$
