matrix calculus reference

--- a/common/mat_calc.tex
+++ b/common/mat_calc.tex
@@ -88,14 +88,15 @@ Other references are also available.%
 \begin{definition}[Jacobian matrix]
 \footnote{
   \citerp{graham}{52},
+  \citerp{graham2018}{52}{9780486824178}{\textsection ``4.2 The Derivatives of Vectors"},
   \citerp{scharf}{274},
   \citerp{vantrees4}{1398}
   }
 \label{def:grad}
 \index{Jacobian matrix}
 %--------------------------------------
-The \hid{gradient of $\vy$ with respect to $\vx$}, as well as
-the \hid{gradient of $\vy^T$ with respect to $\vx$}, 
+The \opd{gradient of $\vy$ with respect to $\vx$}, as well as
+the \opd{gradient of $\vy^T$ with respect to $\vx$}, 
 is defined as
 \defbox{
   \pderiv{\vy}{\vx}   \eqd
@@ -224,11 +225,11 @@ Let $\vx\in\vRn$ be a vector. Then
    \sum\limits_{i=1}^n
    x_i
    \left[
-      \begin{array}{ccccc}
+      \begin{array}{c}
          a_{1i}   \\
          a_{2i}   \\
          \vdots   \\
-         a_{ni}   \\
+         a_{ni}   
       \end{array}
    \right]
  \\&=
@@ -236,11 +237,11 @@ Let $\vx\in\vRn$ be a vector. Then
    x_i
    \left[ \begin{array}{ccccc} x_1 & x_2 & \cdots & x_n \end{array} \right]^\ast
    \left[
-      \begin{array}{ccccc}
+      \begin{array}{c}
          a_{1i}   \\
          a_{2i}   \\
          \vdots   \\
-         a_{ni}   \\
+         a_{ni}   
       \end{array}
    \right]
 \\&=
@@ -494,8 +495,9 @@ Let
 %--------------------------------------
 \begin{theorem}[\thmd{Affine equations}]
 \footnote{
-  \citerp{graham}{54}
+  \citerp{graham}{54},
   %\citer{felippa}
+  \citerp{graham2018}{54}{9780486824178}{\textsection ``4.2 The Derivatives of Vectors"}
   }
 \label{thm:mc_Ax}
 %--------------------------------------
