random process basis - Mercer's Theorem ilemma

--- a/common/randprocess.tex
+++ b/common/randprocess.tex
@@ -191,6 +191,7 @@ This criterion is called the  Karhunen-Lo\`{e}ve criterion for $\rvx(t)$.
 
 %---------------------------------------
 \begin{theorem}
+\label{thm:opR}
 %---------------------------------------
 Let $\opR$ be an \ope{auto-correlation} operator.
 \thmbox{\begin{array}{lll}
@@ -338,6 +339,17 @@ and $\seq{\fpsi_n}{n\in\Z}$ are the eigenfunctions of $\opR$ such that
   \item Define $\ds\dotx_n\eqd \inprod{\rvx(t)}{\fpsi_n(t)}$ \label{idef:kle_xdot}
   \item Define $\ds\opR\rvx(t) \eqd \int_{u\in\R} \Rxx(t,u)\rvx(u)\du$ \label{idef:kle_R}
 
+  \item lemma: \label{ilem:kle_mercer}
+        $\ds\pE\brs{\rvx(t)\rvx(t)} = \sum_{n\in\Z}\lambda_n \abs{\fpsi_n(t)}^2$. Proof:
+        \begin{align*}
+          \pE\brs{\rvx(t)\rvx(t)}
+            &= \sum_{n\in\Z}\lambda_n \abs{\fpsi_n(t)}^2
+            && \begin{array}{MMM}
+                   by  & \prope{non-negative} property & \xref{thm:opR}
+                 \\and & \thme{Mercer's Theorem}       & \xref{thm:mercer}
+               \end{array}
+        \end{align*}
+
   \item lemma: \label{ilem:kle_1}
     \begin{align*}
        \pE\brs{\rvx(t) \brp{\sum_{n\in\Z}\dotx_n \fpsi_n(t)}^\ast}
@@ -400,13 +412,11 @@ and $\seq{\fpsi_n}{n\in\Z}$ are the eigenfunctions of $\opR$ such that
        - \pE\brs{\rvx(t)\brs{\sum_{n\in\Z}\dotx_n \fpsi_n(t)}^\ast}
        - \pE\brs{\rvx^\ast(t)\sum_{n\in\Z}\dotx_n \fpsi_n(t)}
        + \pE\brs{\sum_{n\in\Z}\dotx_n \fpsi_n(t) \brs{\sum_{m\in\Z}\dotx_m \fpsi_m(t) }^\ast }
-      %&& \text{by \prope{linearity}}
-      %&& \text{\xref{thm:pE_linop}}
-   %\\&\text{by \thme{Mercer's Theorem}\xref{thm:mercer}?}
-    \\&= \mcom{\sum_{n\in\Z}\lambda_n \abs{\fpsi_n(t)}^2
-       - \sum_{n\in\Z}\lambda_n \abs{\fpsi_n(t)}^2}{$0$}
-       - \brs{\sum_{n\in\Z}\lambda_n \abs{\fpsi_n(t)}^2}^\ast
-       + \sum_{n\in\Z}\lambda_n \abs{\fpsi_n(t)}^2
+    \\&\qquad\text{by \prope{linearity} \xref{thm:pE_linop}}
+    \\&= \mcom{\sum_{n\in\Z}\lambda_n \abs{\fpsi_n(t)}^2}{by \pref{ilem:kle_mercer}}
+       - \mcom{\sum_{n\in\Z}\lambda_n \abs{\fpsi_n(t)}^2}{by \pref{ilem:kle_1}}
+       - \mcom{\brs{\sum_{n\in\Z}\lambda_n \abs{\fpsi_n(t)}^2}^\ast}{by \pref{ilem:kle_1}}
+       + \mcom{\sum_{n\in\Z}\lambda_n \abs{\fpsi_n(t)}^2}{by \pref{ilem:kle_2}}
     \\&= 0
        - \sum_{n\in\Z}\lambda_n \abs{\fpsi_n(t)}^2
        + \sum_{n\in\Z}\lambda_n \abs{\fpsi_n(t)}^2
