KL Expansion - normalized hypothesis

--- a/common/randprocess.tex
+++ b/common/randprocess.tex
@@ -329,6 +329,8 @@ Let $\seq{\lambda_n}{n\in\Z}$ be the eigenvalues of $\opR$
 and $\seq{\fpsi_n}{n\in\Z}$ are the eigenfunctions of $\opR$ such that
     $\opR \fpsi_n = \lambda_n \fpsi_n$.
 \thmbox{
+  \mcom{\norm{\fpsi_n(t)}=1}{$\setn{\fpsi_n(t)}$ are \prope{normalized}}
+  \implies
   \mcom{\pE\brp{\abs{\rvx(t)-\sum_{n\in\Z}\inprod{\rvx(t)}{\fpsi_n(t)} \fpsi_n(t) }^2} = 0}
        {\prope{convergence in probability}}
     \qquad($\setn{\fpsi_n(t)}$ is a \structe{basis} for $\rvx(t)$)
@@ -389,9 +391,11 @@ and $\seq{\fpsi_n}{n\in\Z}$ are the eigenfunctions of $\opR$ such that
          && \text{by property of \structe{eigen-system}}
        \\&= \sum_{n\in\Z}\sum_{m\in\Z}\lambda_m \brp{\int_{u\in\R}\fpsi_m(u) \fpsi_n^\ast(u)\du }   \fpsi_n(t)   \fpsi_m^\ast(t)
          && \text{by \prope{linearity}}
-       \\&\eqq \sum_{n\in\Z}\sum_{m\in\Z}\lambda_m \kdelta_{mn}   \fpsi_n(t)   \fpsi_m^\ast(t)
-         && \text{by \prope{orthogonal} property}
+       \\&= \sum_{n\in\Z}\sum_{m\in\Z}\lambda_m \norm{\fpsi(t)}^2 \kdelta_{mn}   \fpsi_n(t)   \fpsi_m^\ast(t)
+         && \text{by \prope{orthogonal} property} 
          && \text{\xref{thm:opR_eigen}}
+       \\&= \sum_{n\in\Z}\sum_{m\in\Z}\lambda_m \kdelta_{mn}   \fpsi_n(t)   \fpsi_m^\ast(t)
+         && \text{by \prope{normalized} hypothesis}
        \\&= \sum_{n\in\Z}\lambda_n   \fpsi_n(t)   \fpsi_n^\ast(t)
          && \text{by definition of \fncte{Kronecker delta} $\kdelta$}
          && \text{\xref{def:kdelta}}
