arithmetic mean estimator fix-up

--- a/common/moment_estimation.tex
+++ b/common/moment_estimation.tex
@@ -50,7 +50,9 @@ be the \fncte{arithmetic mean} \xref{def:am}.
     && \text{by previous result}
   \\&= \pE\brp{\sum_{n=1}^{\xN}\lambda_n\rvx_n -\mean}^2
     && \text{by definition of $\meanest$}
-  \\&= \pE\brs{\sum_{n=1}^{\xN}\rvx_n -\mean\mcom{\sum_{n=1}^{\xN}\lambda_n}{$1$}}^2
+  \\&= \pE\brs{\sum_{n=1}^{\xN}\lambda_n\rvx_n -\mean\mcom{\sum_{n=1}^{\xN}\lambda_n}{$1$}}^2
+    && \text{by $\sum\lambda_n=1$ hypothesis}
+    && \text{\xref{def:am}}
   \\&= \pE\brs{\sum_{n=1}^{\xN}\lambda_n(\rvx_n-\mean)}^2
   \\&= \pE\brs{\sum_{n=1}^{\xN}\lambda_n(\rvx_n-\mean)\sum_{m=1}^{\xN}\lambda_m(\rvx_m-\mean)}
   \\&= \sum_{n=1}^{\xN}\sum_{m=1}^{\xN}\lambda_n\lambda_m\brp{\pE\brs{(\rvx_n-\mean)(\rvx_m-\mean)}                                     }
@@ -58,19 +60,20 @@ be the \fncte{arithmetic mean} \xref{def:am}.
   \\&= \sum_{n=1}^{\xN}\sum_{m=1}^{\xN}\lambda_n\lambda_m\brp{\pE\brs{\rvx_n\rvx_m}-\mean^2-\mean^2+\mean^2                             }
   \\&= \sum_{n=1}^{\xN}\sum_{m=1}^{\xN}\lambda_n\lambda_m\brp{\pE\brs{\rvx_n\rvx_m}-\mean^2                                             }
   \\&= \mathrlap{
-       \sum_{n=1}^{\xN} \lambda_n^2 {\pE\brs{\rvx_n^2    }-\mean^2}
+       \sum_{n=1}^{\xN} \lambda_n^2 \brp{\pE\brs{\rvx_n^2    }-\mean^2}
      + \sum_{n=1}^{\xN}\sum_{m\neq n }\lambda_n\lambda_m\brp{\pE\brs{\rvx_n\rvx_m}-\mean^2 }
        }
   \\&= \mathrlap{
        \sum_{n=1}^{\xN} \lambda_n^2 \brp{\pE\brs{\rvx_n^2    }-\mean^2                                             }
-     + \sum_{n=1}^{\xN}\sum_{m\neq n  }\lambda_n\lambda_m\brp{\pE\rvx_n\pE\rvx_m  }-\mean^2
+     + \sum_{n=1}^{\xN}\sum_{m\neq n  }\lambda_n\lambda_m\brp{\pE\rvx_n\pE\rvx_m  -\mean^2}
        }
   \\&= \mathrlap{
        \sum_{n=1}^{\xN} \lambda_n^2 \sigma^2
      + \cancelto{0}{
-       \frac{1}{\xN^2}\sum_{n=1}^{\xN}\sum_{m\neq n  }\lambda_n\lambda_m\brp{\mean\mean           -\mean^2}
-       }
-       }
+       \sum_{n=1}^{\xN}\sum_{m\neq n  }\lambda_n\lambda_m\brp{\mean\mean-\mean^2}
+       }}
+    && \text{by \prope{WSS} hypothesis}
+    && \text{(A)}
   \\&= \sigma^2\sum_{n=1}^{\xN} \lambda_n^2
   \\
   \mse(\meanest)
