arithmetic mean estimator lower bound using CS ineq

--- a/common/moment_estimation.tex
+++ b/common/moment_estimation.tex
@@ -17,7 +17,7 @@ be the \fncte{arithmetic mean} \xref{def:am}.
       (A).& $\seqn{\rvx_n}$ is \prope{wide sense stationary} & and
     \\(B).& $\mu\eqd\pE\rvx_n$                               & and
     \\(C).& $\seqn{\rvx_n}$ is \prope{uncorrelated}          & and
-    \\(D).& \mc{2}{M}{$\ds\meanest\eqd\sum_{n=1}^\xN \lambda_n \rvx_n$ (\fncte{arithmetic mean})}
+    \\(D).& \mc{2}{M}{$\ds\meanest\eqd\sum_{n=1}^\xN \lambda_n \rvx_n$\qquad(\fncte{arithmetic mean})}
   \end{array}}
   \implies
   \brb{\begin{array}{FrclDD}
@@ -98,7 +98,7 @@ be the \fncte{arithmetic mean} \xref{def:am}.
       (A).& $\seqn{\rvx_n}$ is \prope{wide sense stationary} & and
     \\(B).& $\mu\eqd\pE\rvx_n$                               & and
     \\(C).& $\seqn{\rvx_n}$ is \prope{uncorrelated}          & and
-    \\(D).& \mc{2}{M}{$\ds\meanest\eqd\frac{1}{\xN}\sum_{n=1}^\xN \rvx_n$ \qquad(\fncte{average})}
+    \\(D).& \mc{2}{M}{$\ds\meanest\eqd\frac{1}{\xN}\sum_{n=1}^\xN \rvx_n$\qquad(\fncte{average})}
   \end{array}}
   \implies
   \brb{\begin{array}{FrclDD}
@@ -108,3 +108,55 @@ be the \fncte{arithmetic mean} \xref{def:am}.
   \end{array}}
   }
 \end{corollary}
+\begin{proof}
+These results follow from \prefpp{thm:mse_mean} with $\lambda_n=\frac{1}{\xN}$.
+\end{proof}
+
+What is the best sequence $\seqn{\lambda_n}$ to use? 
+The next lemma shows that $\lambda_n=\frac{1}{\xN}$, and hence 
+of all the possible $\seqn{\lambda_n}$ of the \fncte{arithmetic mean} estimators \xref{thm:mse_mean},
+the \fnctb{average} estimator (with $\lambda_n=1/\xN$) \xref{cor:mse_average}, 
+leads to the lowest $\mse$ (the best estimator).
+%---------------------------------------
+\begin{lemma}
+\label{lem:lambda_sq}
+%---------------------------------------
+\lembox{
+  \brb{\sum_{n=1}^{\xN} \lambda_n=1}
+  \implies
+  \sum_{n=1}^{\xN} \lambda_n^2 \ge \frac{1}{\xN}
+  }
+\end{lemma}
+\begin{proof}
+\url{http://faculty.wwu.edu/sarkara/ph4.pdf}
+\begin{enumerate}
+  \item Let the sequence $\seqn{a_n}$ be defined as $\seqn{a_n}\eqd\seqn{\ldots,1,1,1,\ldots}$
+        \label{idef:lambda_sq_an}
+  \item Let \fncte{inner product} $\inprod{a_n}{b_n}$ be defined as $\inprod{a_n}{b_n}\eqd\sum_{n=1}^{\xN}a_n b_n$
+        \label{idef:lambda_sq_inprod}
+  \item Let \fncte{norm} $\norm{a_n}$ be defined as $\norm{a_n}\eqd\sum_{n=1}^{\xN}a_n^2$
+        \label{idef:lambda_sq_norm}
+  \item Proof of lemma:
+        \begin{align*}
+          \boxed{\frac{1}{\xN}}
+            &= \frac{1}{\xN}\brp{\sum_{n=1}^{\xN} \lambda_n}^2
+            && \text{by $\sum_{n=1}^{\xN} \lambda_n=1$ hypothesis}
+          \\&= \frac{1}{\xN}\brp{\sum_{n=1}^{\xN} a_n\lambda_n}^2
+            && \text{by $\seqn{a_n}\eqd\seqn{\ldots,1,1,1,\ldots}$ definition}
+            && \text{\xref{idef:lambda_sq_an}}
+          \\&\eqd \frac{1}{\xN}\inprod{a_n}{\lambda_n}^2
+            && \text{by definition of $\inprodn$}
+            && \text{\xref{idef:lambda_sq_inprod}}
+          \\&\boxed{\leq} \frac{1}{\xN}\norm{a_n}^2\norm{\lambda_n}^2
+            && \text{by \ineqe{Cauchy-Schwarz Inequality}}
+            && \text{\xref{thm:cs}}
+          \\&\eqd \frac{1}{\xN}\brp{\sum_{n=1}^{\xN} a_n^2} \brp{\sum_{n=1}^{\xN} \lambda_n^2}
+            && \text{by definition of $\normn$}
+            && \text{\xref{idef:lambda_sq_norm}}
+          \\&\eqd \frac{1}{\xN}\brp{\sum_{n=1}^{\xN} 1^2} \brp{\sum_{n=1}^{\xN} \lambda_n^2}
+            && \text{by definition of $\seqn{a_n}$}
+            && \text{\xref{idef:lambda_sq_an}}
+          \\&= \boxed{\sum_{n=1}^{\xN} \lambda_n^2}
+        \end{align*}
+\end{enumerate}
+\end{proof}
