--- a/common/vsinprod.tex
+++ b/common/vsinprod.tex
@@ -180,8 +180,8 @@ Proof that $\inprod{\vx}{\vy}=0  \impliedby \vy=\vzero$:
 \end{proof}
 
 One of the most useful and widely used inequalities in analysis is the
-\hie{Cauchy-Schwarz Inequality}
-(sometimes also called the \hie{Cauchy-Bunyakovsky-Schwarz Inequality}).
+\ineqe{Cauchy-Schwarz Inequality}
+(sometimes also called the \ineqe{Cauchy-Bunyakovsky-Schwarz Inequality}).
 \index{inequalities!Cauchy-Bunyakovsky-Schwarz}
 In fact, we will use this inequality shortly to prove that
 every inner product space {\em has} a norm
