--- a/common/randprocess.tex
+++ b/common/randprocess.tex
@@ -256,6 +256,9 @@ Let $\opR$ be an \ope{auto-correlation} operator.
 \end{align*}
 \end{proof}
 
+%=======================================
+\section{Properties}
+%=======================================
 %---------------------------------------
 \begin{theorem}
 \footnote{
@@ -355,8 +358,8 @@ and $\seq{\fpsi_n}{n\in\Z}$ are the eigenfunctions of $\opR$ such that
 
   \item lemma: \label{ilem:kle_1}
     \begin{align*}
-       \pE\brs{\rvx(t) \brp{\sum_{n\in\Z}\dotx_n \fpsi_n(t)}^\ast}
-         &\eqd \pE\brs{\rvx(t) \brp{\sum_{n\in\Z}\int_{u\in\R}\rvx(u)\fpsi_n^\ast(u)\du \fpsi_n(t)}^\ast}
+       &\pE\brs{\rvx(t) \brp{\sum_{n\in\Z}\dotx_n \fpsi_n(t)}^\ast}
+       \\&\eqd \pE\brs{\rvx(t) \brp{\sum_{n\in\Z}\int_{u\in\R}\rvx(u)\fpsi_n^\ast(u)\du \fpsi_n(t)}^\ast}
          && \text{by definition of $\dotx$}
          && \text{\xref{idef:kle_xdot}}
        \\&= \sum_{n\in\Z}\brp{\int_{u\in\R}\pE\brs{\rvx(t)\rvx^\ast(u)}\fpsi_n(u)\du} \fpsi_n^\ast(t)
@@ -375,8 +378,8 @@ and $\seq{\fpsi_n}{n\in\Z}$ are the eigenfunctions of $\opR$ such that
 
   \item lemma: \label{ilem:kle_2}
     \begin{align*}
-       \pE\brs{\sum_{n\in\Z}\dotx_n \fpsi_n(t)\brp{\sum_{m\in\Z}\dotx_m \fpsi_m(t)}^\ast}
-         &\eqd \pE\brs{\sum_{n\in\Z}\int_{u\in\R}\rvx(u)\fpsi_n^\ast(u)\du   \fpsi_n(t)\brp{\sum_{m\in\Z}\int_v \rvx(v)\fpsi_m^\ast(v)\dv \fpsi_m(t)}^\ast}
+       &\pE\brs{\sum_{n\in\Z}\dotx_n \fpsi_n(t)\brp{\sum_{m\in\Z}\dotx_m \fpsi_m(t)}^\ast}
+       \\&\eqd \pE\brs{\sum_{n\in\Z}\int_{u\in\R}\rvx(u)\fpsi_n^\ast(u)\du   \fpsi_n(t)\brp{\sum_{m\in\Z}\int_v \rvx(v)\fpsi_m^\ast(v)\dv \fpsi_m(t)}^\ast}
          && \text{by definition of $\dotx$}
          && \text{\xref{idef:kle_xdot}}
        \\&= \sum_{n\in\Z}\sum_{m\in\Z}\int_u\brp{\int_v \pE\brs{\rvx(u)\rvx^\ast(v)}\fpsi_m(v)\dv} \fpsi_n^\ast(u)\du   \fpsi_n(t)   \fpsi_m^\ast(t)
@@ -417,14 +420,11 @@ and $\seq{\fpsi_n}{n\in\Z}$ are the eigenfunctions of $\opR$ such that
        - \pE\brs{\rvx(t)\brs{\sum_{n\in\Z}\dotx_n \fpsi_n(t)}^\ast}
        - \pE\brs{\rvx^\ast(t)\sum_{n\in\Z}\dotx_n \fpsi_n(t)}
        + \pE\brs{\sum_{n\in\Z}\dotx_n \fpsi_n(t) \brs{\sum_{m\in\Z}\dotx_m \fpsi_m(t) }^\ast }
-    \\&\qquad\text{by \prope{linearity} \xref{thm:pE_linop}}
+    \\&\qquad\text{by \prope{linearity} of $\pE$ \xref{thm:pE_linop}}
     \\&= \mcom{\sum_{n\in\Z}\lambda_n \abs{\fpsi_n(t)}^2}{by \pref{ilem:kle_mercer}}
        - \mcom{\sum_{n\in\Z}\lambda_n \abs{\fpsi_n(t)}^2}{by \pref{ilem:kle_1}}
        - \mcom{\brs{\sum_{n\in\Z}\lambda_n \abs{\fpsi_n(t)}^2}^\ast}{by \pref{ilem:kle_1}}
        + \mcom{\sum_{n\in\Z}\lambda_n \abs{\fpsi_n(t)}^2}{by \pref{ilem:kle_2}}
-    \\&= 0
-       - \sum_{n\in\Z}\lambda_n \abs{\fpsi_n(t)}^2
-       + \sum_{n\in\Z}\lambda_n \abs{\fpsi_n(t)}^2
     \\&= 0
   \end{align*}
 \end{enumerate}
