--- a/common/moment_estimation.tex
+++ b/common/moment_estimation.tex
@@ -132,6 +132,8 @@ that the best sequence in terms of minimal $\mse$
 is the sequence $\seqn{\lambda_n}\eqd\frac{1}{\xN}\seqn{\ldots,1,1,1,\ldots}$,
 which is the \fncte{average} estimator,
 which yields  $\mse(\meanest)= \frac{\sigma^2}{\xN}$ \xref{cor:mse_average}.
+\\\indentx\includegraphics{graphics/rectangular_1N.pdf}
+\\
 That is, it turns out that $\frac{1}{\xN}\le\sum\lambda_n^2$ for all possible sequences $\seqn{\lambda_n}$.
 This fact is demonstrated by \pref{lem:lambda_sq} (next),
 which in turn follows more or less directly from the ubiquitous 
@@ -143,8 +145,8 @@ which in turn follows more or less directly from the ubiquitous
 %---------------------------------------
 \lembox{
   \brb{\sum_{n=1}^{\xN} \lambda_n=1}
-  \implies
-  \sum_{n=1}^{\xN} \lambda_n^2 \ge \frac{1}{\xN}
+  \qquad\implies\qquad
+  \brb{\frac{1}{\xN} \le \sum_{n=1}^{\xN} \lambda_n^2}
   }
 \end{lemma}
 \begin{proof}
